경북대 BE_김동윤 6주차 과제(1, 2, 3단계) (#141)
* init

* refactor: Category api CRUD 기능 수정

* refactor: 패키지 경로 수정

* refactor(ProductController): Product, Option CRUD 수정

* refactor(ProductService): product CRUD 기능 수정

* refactor: option 패키지를 product 하위로 이동

* feat(ProductRepository): categoryId로 조회기능 추가

* refactor(OptionService): Option CRUD 기능 보완

* refactor: option 패키지 이동에따라 import 경로 수정

* feat: Entity의 CreatedDate 필드 자동생성을 위한 config 추가

* feat: createdDate 필드 추가

* feat: createdDate 필드 추가

* refactor: Request로 명칭 바꿔서 역할 명확히함

* feat: CRUD 기능 강화
- wishlistRequst 이용해서 addwish()
- List<wishlistRequest> -> addWishes()
- 기존에 wishlistItem 파라미터로 받는 함수 삭제
:

* refactor: CRUD 기능 보완

* refactor: saveWishlist에서 service단으로 로직 이전

* refactor: saveWishlist에서 service단으로 로직 이전

* feat: 주문목록 조회 기능 추가

* refactor: 기본생성자 추가

* refactor: optionid -> optionId로 변경

* feat: order pages 반환하는 함수 추가

* refactor: 패키지 경로 수정

* 패키지 오류 수정

* html 복사

* refactor: 이름 변경

* refactor: 이름 변경 및 kakao 로그인 환경 제공

* refactor: 태그 이름 변경

* delete: 필요없어져서 주석 처리

* refactor: 상품옵션 APi와 상품 API 태그 분리

* refactor: 태그 이름 변경

* feat: 옵션 자동 insert

* feat: 상품 수정 html 추가

* refactor: update 오류 수정

* refactor: edit html 호출

* refactor: created에 반환값 포함

* refactor: created에 반환값 포함

* refactor: 옵션 추가 uri 수정

* refactor: 옵션 추가 파라미터 변경에 따라 수정

* refactor: optionService 이용을 controller로 가져옴

* refactor: Option에 Cascade적용해서 순환참조 문제 해결

* refactor: uri 매칭 수정

* refactor: option cascade 설정에 맞춰, create, update 문 수정

* refactor: transactional 추가

* feat: Barear 형식에서 email 추출 함수 작성

* refactor: 테스트용 html

* feat: save()할때, jwtToken 반환, userId로 jwtToken 가져오는 기능

* kakao로그인 테스트용

* refactor: redirecturi 수정

* jwt 변환안한 accessToken 저장
- 프론트에는 email을 jwt 변환하여 토큰 반환
- 일반 로그인 기능 추가

* getUserInfo 반환값 id로 수정
- accessToken 그대로 저장

* refactor: kakaoUser를 email로 찾게 변경

* refactor: joinColumn 추가

* refactor: 이름변경으로 기능 명확히함
- jwtToken -